# IRC-Server

./: CMakeLists.txt  Makefile  README.md
Include/: Channel.hpp  Hash.hpp  History.hpp  Message.hpp  Server.hpp  User.hpp  answers.hpp  sendError.hpp  sendReply.hpp  utils.hpp
src/: Channel.cpp  Hash.cpp  History.cpp  Message.cpp  Server.cpp  User.cpp  main.cpp  sendError.cpp  sendReply.cpp  utils.cpp
src/commands/: channelCommands.cpp  ircOperatorCommands.cpp  otherCommands.cpp  registrationCommands.cpp  userCommands.cpp
